[package]
name = "blink-alloc"
version = "0.2.1"
edition = "2018"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blink-alloc"
homepage = "https://github.com/zakarumych/blink-alloc"
repository = "https://github.com/zakarumych/blink-alloc"
readme = "README.md"
description = "Fast, concurrent, arena-based allocator with drop support"
keywords = ["allocator", "arena", "concurrent", "drop"]

[features]
nightly = ["allocator-api2/nightly", "bumpalo/allocator_api"]
alloc = ["allocator-api2/alloc"]
oom_handling = []
sync = ["parking_lot"]

default = ["alloc", "oom_handling"]

[dependencies]
parking_lot = {  version = "0.12", optional = true }
sptr = "0.3"
allocator-api2 = { version = "0.1.3", default-features = false }

[dev-dependencies]
criterion = "0.4"
bumpalo = "3.7"

[[bench]]
name = "bench"
harness = false
required-features = ["alloc", "sync", "nightly"]

[package.metadata.docs.rs]
all-features = true
